--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-dropzone": "^14.4.0",
     "react-hook-form": "^7.71.1",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.1.0",
     "zod": "^4.3.6"
   },
